# assurance-forge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  issue-body.md
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: ARCHITECTURE.md  COVERAGE.md
src/ai/: ai_claim_review.cpp  ai_claim_review.h  ai_provider.h  ai_service.cpp  ai_service.h  ai_settings.cpp  ai_settings.h  ai_task_runner.cpp  ai_task_runner.h  ai_types.cpp  ai_types.h  http_client.cpp  http_client.h  libcurl_http_client.cpp  libcurl_http_client.h  openai_provider.cpp  openai_provider.h  secret_store.cpp  secret_store.h
src/app/: app_runtime.cpp  app_runtime.h  app_ui_bootstrap.cpp  app_ui_bootstrap.h  main.cpp  native_file_dialogs.cpp  native_file_dialogs.h  platform_win32_dx11.cpp  platform_win32_dx11.h  recent_projects.cpp  recent_projects.h
src/core/: app_state.cpp  app_state.h  element_factory.cpp  element_factory.h  project_model.cpp  project_model.h  project_service.cpp  project_service.h  sha256.cpp  sha256.h
src/core/problems/: problem_item.cpp  problem_item.h  problems_manager.cpp  problems_manager.h
src/parser/: guidelines_parser.cpp  guidelines_parser.h
src/ui/: element_context_menu.cpp  element_context_menu.h  localization.cpp  localization.h  theme.cpp  theme.h  tree_view.cpp  tree_view.h  ui_state.h
src/ui/gsn/: gsn_adapter.cpp  gsn_adapter.h  gsn_canvas.cpp  gsn_canvas.h  gsn_canvas_renderer.cpp  gsn_canvas_renderer.h  gsn_dpi.h  gsn_layout.cpp  gsn_layout.h  gsn_model.h
src/ui/panels/: element_panel.cpp  element_panel.h  preferences_panel.cpp  preferences_panel.h  problems_panel.cpp  problems_panel.h  project_files_panel.cpp  project_files_panel.h  sacm_viewer_panel.cpp  sacm_viewer_panel.h  welcome_modal.cpp  welcome_modal.h
src/ui/widgets/: splitter.cpp  splitter.h
tests/: test_ai_claim_review.cpp  test_ai_service.cpp  test_ai_settings.cpp  test_ai_task_runner.cpp  test_element_factory.cpp  test_guidelines_parser.cpp  test_layout.cpp  test_localization.cpp  test_openai_provider.cpp  test_problems_manager.cpp  test_project_service.cpp  test_recent_projects.cpp  test_sha256.cpp
